data-name, :before for icons

--- a/index.html
+++ b/index.html
@@ -27,113 +27,119 @@
       <div class="container">
         <div class="row">
           <div class="span6">
-            <h3><i class="icon-briefcase"></i>Work</h3>
-            <ul>
-              <li>
-                <b>Georgia Tech Research Institute -
-                  Cyber Tech and Info Security Lab</b>
-              </li>
-              <ul>
-                <li><b>Research scientist</b> 2010&mdash;present</li>
-                <li><b>Software co-op</b> 2007&mdash;2010</li>
-              </ul>
-              <li>
-                Some small open source projects that have spun off from
-                my work at GTRI are listed at
-                <a href="http://codeswarm.org/">codeswarm.org</a>.
-              </li>
-            </ul>
-            <h3><i class="icon-book"></i>School</h3>
-            <ul>
-              <li>
-                <b>Computer Science MS, Georgia Tech</b>
-                2010&mdash;December 2013
-              </li>
-              <ul>
-                <li>Specialization in information security.</li>
-              </ul>
-              <li>
-                <b>Computer Science BS, Georgia Tech</b>
-                2005&mdash;2010
-              </li>
+            <section data-name="work">
+              <h3>Work</h3>
               <ul>
                 <li>
-                  Specialization in theory and computing platforms.
-                  GPA: 3.78
+                  <b>Georgia Tech Research Institute -
+                    Cyber Tech and Info Security Lab</b>
+                </li>
+                <ul>
+                  <li><b>Research scientist</b> 2010&mdash;present</li>
+                  <li><b>Software co-op</b> 2007&mdash;2010</li>
+                </ul>
+                <li>
+                  Some small open source projects that have spun off from
+                  my work at GTRI are listed at
+                  <a href="http://codeswarm.org/">codeswarm.org</a>.
                 </li>
               </ul>
-            </ul>
-            <p><a href="data/gt-class.html">List of courses completed</a></p>
+            </section>
+            <section data-name="school">
+              <h3>School</h3>
+              <ul>
+                <li>
+                  <b>Computer Science MS, Georgia Tech</b>
+                  2010&mdash;December 2013
+                </li>
+                <ul>
+                  <li>Specialization in information security.</li>
+                </ul>
+                <li>
+                  <b>Computer Science BS, Georgia Tech</b>
+                  2005&mdash;2010
+                </li>
+                <ul>
+                  <li>
+                    Specialization in theory and computing platforms.
+                    GPA: 3.78
+                  </li>
+                </ul>
+              </ul>
+              <p><a href="data/gt-class.html">List of courses completed</a></p>
+            </section>
           </div>
           <div class="span6">
-            <h3><i class="icon-heart"></i>Programming</h3>
-            <table class="languages">
-              <tr>
-                <th>Scala</th>
-                <td>
-                  <p>
-                    I began using Scala in 2012 for 3D graphics project, and it
-                    quickly became my favorite and most productive language.
-                  </p>
-                </td>
-              </tr>
-              <tr>
-                <th>Java</th>
-                <td>
-                  <p>
-                    I started with Java in 2005 and since have worked extensively
-                    with Servlet-based web applications. Since adopting Scala,
-                    I have lost patience with Java's inadequacies.
-                  </p>
-                </td>
-              </tr>
-              <tr>
-                <th>JavaScript</th>
-                <td>
-                  <p>
-                    My JavaScript knowledge comes from working with
-                    rich webapps at GTRI since 2007 and various hobby web projects.
-                  </p>
-                </td>
-              </tr>
-              <tr>
-                <th>Python</th>
-                <td>
-                  <p>
-                    I have dabbled with Python in small projects including a
-                    rudimentary audio synthesizer.
-                  </p>
-                </td>
-              </tr>
-              <tr>
-                <th>C/C++</th>
-                <td>
-                  <p>
-                    I am mildly capable with C/C++, mostly from school work in which
-                    I have written an LLVM extension and a Linux kernel module.
-                  </p>
-                </td>
-              </tr>
-              <tr>
-                <th>PHP</th>
-                <td>
-                  <p>
-                    I used PHP for my first web application in 2003 and have revisited
-                    it for small projects since then. I have no fondness for it.
-                  </p>
-                </td>
-              </tr>
-            </table>
+            <section data-name="programming">
+              <h3>Programming</h3>
+              <table class="languages">
+                <tr>
+                  <th>Scala</th>
+                  <td>
+                    <p>
+                      I began using Scala in 2012 for 3D graphics project, and it
+                      quickly became my favorite and most productive language.
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <th>Java</th>
+                  <td>
+                    <p>
+                      I started with Java in 2005 and since have worked extensively
+                      with Servlet-based web applications. Since adopting Scala,
+                      I have lost patience with Java's inadequacies.
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <th>JavaScript</th>
+                  <td>
+                    <p>
+                      My JavaScript knowledge comes from working with
+                      rich webapps at GTRI since 2007 and various hobby web projects.
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <th>Python</th>
+                  <td>
+                    <p>
+                      I have dabbled with Python in small projects including a
+                      rudimentary audio synthesizer.
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <th>C/C++</th>
+                  <td>
+                    <p>
+                      I am mildly capable with C/C++, mostly from school work in which
+                      I have written an LLVM extension and a Linux kernel module.
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <th>PHP</th>
+                  <td>
+                    <p>
+                      I used PHP for my first web application in 2003 and have revisited
+                      it for small projects since then. I have no fondness for it.
+                    </p>
+                  </td>
+                </tr>
+              </table>
+            </section>
           </div>
-          <div>
-            <div class="span6">
-              <h3><i class="icon-wrench"></i>Tools and libraries</h3>
-            </div>
+          <div class="span6">
+            <section data-name="tools">
+              <h3>Tools and libraries</h3>
+            </section>
           </div>
-          <div>
-            <div class="offset6 span6">
-              <h3><i class="icon-key"></i>Philosophy</h3>
-            </div>
+          <div class="span6">
+            <section data-name="philosophy">
+              <h3>Philosophy</h3>
+            </section>
           </div>
         </div>
       </div>
@@ -157,32 +163,32 @@
           </div>
           <div class="span4 links">
             <ul>
-              <li>
+              <li data-name="email">
                 <a href="mailto:ch.martin@gmail.com">
                   <i class="icon-envelope"></i>ch.martin@gmail.com
                 </a>
               </li>
-              <li>
+              <li data-name="twitter">
                 <a href="https://twitter.com/chris__martin">
                   <i class="icon-twitter"></i>@chris__martin
                 </a>
               </li>
-              <li>
+              <li data-name="github">
                 <a href="https://github.com/chris-martin">
                   <i class="icon-github"></i>GitHub
                 </a>
               </li>
-              <li>
+              <li data-name="stackoverflow">
                 <a href="http://stackoverflow.com/users/402884">
                   <i class="icon-stackoverflow"></i>Stack Overflow
                 </a>
               </li>
-              <li>
+              <li data-name="googleplus">
                 <a href="https://plus.google.com/102949496905033075906">
                   <i class="icon-googleplus"></i>Google+
                 </a>
               </li>
-              <li>
+              <li data-name="facebook">
                 <a href="https://www.facebook.com/ch.martin">
                   <i class="icon-facebook"></i>Facebook
                 </a>
