add some philosophy text

--- a/index.html
+++ b/index.html
@@ -139,6 +139,18 @@
           <div class="span6">
             <section data-name="philosophy">
               <h3>Philosophy</h3>
+              <ul>
+                <li><b>Compose</b>. Avoid class extension.
+                  Be wary of frameworks that limit composition.</li>
+                <li><b>Test</b> when testing helps.
+                  Test to shorten the feedback loop and to relieve anxiety.</li>
+                <li>Favor <b>immutable</b> types and <b>pure functions</b>.
+                  Mix functional and imperative styles.</li>
+                <li><b>Simplicity</b> in everything awaits discovery.
+                  Time producing less code is well spent.</li>
+                <li><b>Commit quality</b> is as important as code quality.
+                  Write short diffs and long messages.</li>
+              </ul>
             </section>
           </div>
         </div>
