--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                   <th>Scala</th>
                   <td>
                     <p>
-                      I began using Scala in 2012 for 3D graphics project, and it
+                      I began using Scala in 2012 for a 3D graphics project, and it
                       quickly became my favorite and most productive language.
                     </p>
                   </td>
