tools, resort layout

--- a/index.html
+++ b/index.html
@@ -26,49 +26,7 @@
     <section class="middle">
       <div class="container">
         <div class="row">
-          <div class="span6">
-            <section data-name="work">
-              <h3>Work</h3>
-              <ul>
-                <li>
-                  <b>Georgia Tech Research Institute -
-                    Cyber Tech and Info Security Lab</b>
-                </li>
-                <ul>
-                  <li><b>Research scientist</b> 2010&mdash;present</li>
-                  <li><b>Software co-op</b> 2007&mdash;2010</li>
-                </ul>
-                <li>
-                  Some small open source projects that have spun off from
-                  my work at GTRI are listed at
-                  <a href="http://codeswarm.org/">codeswarm.org</a>.
-                </li>
-              </ul>
-            </section>
-            <section data-name="school">
-              <h3>School</h3>
-              <ul>
-                <li>
-                  <b>Computer Science MS, Georgia Tech</b>
-                  2010&mdash;December 2013
-                </li>
-                <ul>
-                  <li>Specialization in information security.</li>
-                </ul>
-                <li>
-                  <b>Computer Science BS, Georgia Tech</b>
-                  2005&mdash;2010
-                </li>
-                <ul>
-                  <li>
-                    Specialization in theory and computing platforms.
-                    GPA: 3.78
-                  </li>
-                </ul>
-              </ul>
-              <p><a href="data/gt-class.html">List of courses completed</a></p>
-            </section>
-          </div>
+
           <div class="span6">
             <section data-name="programming">
               <h3>Programming</h3>
@@ -131,11 +89,57 @@
               </table>
             </section>
           </div>
+
           <div class="span6">
-            <section data-name="tools">
-              <h3>Tools and libraries</h3>
+            <section data-name="work">
+              <h3>Work</h3>
+              <ul>
+                <li>
+                  <b>Georgia Tech Research Institute -
+                    Cyber Tech and Info Security Lab</b>
+                </li>
+                <ul>
+                  <li><b>Research scientist</b> 2010&mdash;present</li>
+                  <li><b>Software co-op</b> 2007&mdash;2010</li>
+                </ul>
+                <li>
+                  Some small open source projects that have spun off from
+                  my work at GTRI are listed at
+                  <a href="http://codeswarm.org/">codeswarm.org</a>.
+                </li>
+              </ul>
             </section>
           </div>
+
+        </div>
+        <div class="row">
+
+          <div class="span6">
+            <section data-name="school">
+              <h3>School</h3>
+              <ul>
+                <li>
+                  <b>Computer Science MS, Georgia Tech</b>
+                  2010&mdash;December 2013
+                </li>
+                <ul>
+                  <li>Specialization in information security.</li>
+                </ul>
+                <li>
+                  <b>Computer Science BS, Georgia Tech</b>
+                  2005&mdash;2010
+                </li>
+                <ul>
+                  <li>
+                    Specialization in theory and computing platforms.
+                    GPA: 3.78
+                  </li>
+                </ul>
+              </ul>
+              <p><a href="data/gt-class.html">List of courses completed</a></p>
+            </section>
+          </div>
+
           <div class="span6">
             <section data-name="philosophy">
               <h3>Philosophy</h3>
@@ -153,6 +157,41 @@
               </ul>
             </section>
           </div>
+
+        </div>
+        <div class="row">
+
+          <div class="span6">
+            <section data-name="tools">
+              <h3>Tools</h3>
+              <p>Some of the tools in software I most adore:</p>
+              <ul>
+                <li><a href="http://akka.io/">Akka</a></li>
+                <li><a href="http://www.jetbrains.com/idea/">
+                  IntelliJ IDEA</a></li>
+                <li><a href="http://git-scm.com/">Git</a></li>
+                <li><a href="https://github.com/">
+                  Github</a></li>
+                <li><a href="http://inkscape.org/">Inkscape</a></li>
+                <li><a href="http://www.jooq.org/">jOOQ</a></li>
+                <li><a href="http://www.scala-sbt.org/">SBT</a></li>
+                <li><a href="https://github.com/typesafehub/config">
+                  Typesafe config</a></li>
+              </ul>
+              <p>Various other things I've worked with:</p>
+              <ul>
+                <li><a href="http://www.sencha.com/products/extjs">Ext JS</a></li>
+                <li><a href="https://developers.google.com/web-toolkit/">GWT</a></li>
+                <li><a href="http://jquery.com/">jQuery</a></li>
+                <li><a href="http://www.oracle.com/us/products/database/overview/index.html">Oracle Database</a></li>
+                <li><a href="http://static.springsource.org/spring/docs/3.2.x/spring-framework-reference/html/mvc.html">Spring Web MVC</a></li>
+                <li><a href="http://struts.apache.org/release/2.2.x/">
+                  Struts 2</a></li>
+                <li><a href="http://subversion.apache.org/">Subversion</a></li>
+              </ul>
+            </section>
+          </div>
+
         </div>
       </div>
     </section>
