add maven to tools

--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
                 <li><a href="http://www.sencha.com/products/extjs">Ext JS</a></li>
                 <li><a href="https://developers.google.com/web-toolkit/">GWT</a></li>
                 <li><a href="http://jquery.com/">jQuery</a></li>
+                <li><a href="http://maven.apache.org/">Maven</a></li>
                 <li><a href="http://www.oracle.com/us/products/database/overview/index.html">Oracle Database</a></li>
                 <li><a href="http://static.springsource.org/spring/docs/3.2.x/spring-framework-reference/html/mvc.html">Spring Web MVC</a></li>
                 <li><a href="http://struts.apache.org/release/2.2.x/">
