never wear shoes.

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
                   Time producing less code is well spent.</li>
                 <li><b>Commit quality</b> is as important as code quality.
                   Write short diffs and long messages.</li>
+                <li>Never wear shoes without a compelling reason.</li>
               </ul>
             </section>
           </div>
