--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <li><a href="https://github.com/typesafehub/config">
                   Typesafe config</a></li>
               </ul>
-              <p>Various other things I've worked with:</p>
+              <p>Various other things I've worked with significantly:</p>
               <ul>
                 <li><a href="http://www.sencha.com/products/extjs">Ext JS</a></li>
                 <li><a href="https://developers.google.com/web-toolkit/">GWT</a></li>
