--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <div class="span6">
             <section data-name="tools">
               <h3>Tools</h3>
-              <p>Some of the tools in software I most adore:</p>
+              <p>Some of the tools and software I most adore:</p>
               <ul>
                 <li><a href="http://akka.io/">Akka</a></li>
                 <li><a href="http://www.jetbrains.com/idea/">
