--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                   </li>
                 </ul>
               </ul>
-              <p><a href="data/gt-class.html">List of courses completed</a></p>
+              <p><a href="data/gt-class.html">List of courses</a></p>
             </section>
           </div>
 
