scala/python projects

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                     <p>
                       I began using Scala in 2012 for a 3D graphics project, and it
                       quickly became my favorite and most productive language.
+                      Current projects: an Akka-based service to manage OCR processes,
+                      an open database of <a href="http://georgia.chris-martin.org/">
+                      Georgia salary data</a> using the Play framework.
                     </p>
                   </td>
                 </tr>
@@ -63,8 +66,9 @@
                   <th>Python</th>
                   <td>
                     <p>
-                      I have dabbled with Python in small projects including a
-                      rudimentary audio synthesizer.
+                      I have dabbled with Python in small projects: an audio synthesizer,
+                      a presence notification system using an IR temperature sensor,
+                      a few web scraping tools.
                     </p>
                   </td>
                 </tr>
