link to java graphics projects

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                   <td>
                     <p>
                       I began using Scala in 2012 for a
-                      <a href="https://github.com/chris-martin/vine">3D graphics</a>
+                      <a href="https://github.com/chris-martin/vine">3D animation</a>
                       project, and it quickly became my favorite and most productive language.
                       Having a lot of fun with
                       <a href="https://github.com/chris-martin/project-euler">Project Euler</a>.
@@ -53,6 +53,10 @@
                       I started with Java in 2005 and since have worked extensively
                       with Servlet-based web applications. Since adopting Scala,
                       I have lost patience with Java's inadequacies.
+                      Graphics:
+                      <a href="https://github.com/chris-martin/spray">3D sculpting</a>,
+                      <a href="https://github.com/chris-martin/packing-game">circle-packing</a>,
+                      <a href="https://github.com/chris-martin/delaunay">spring physics simulation</a>.
                     </p>
                   </td>
                 </tr>
