add link to hava =)

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                       <a href="https://github.com/chris-martin/spray">3D sculpting</a>,
                       <a href="https://github.com/chris-martin/packing-game">circle-packing</a>,
                       <a href="https://github.com/chris-martin/delaunay">spring physics simulation</a>.
+                      An <a href="https://github.com/chris-martin/hava">Eclipse plugin</a>.
                     </p>
                   </td>
                 </tr>
