--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                     <p>
                       My JavaScript knowledge comes from working with
                       rich webapps at GTRI since 2007 and various hobby web projects.
+                      Some silly experiments with
+                      <a href="http://chris-martin.github.io/spiral/">canvas</a> and
+                      <a href="http://chris-martin.github.io/catgirl/">SVG animation</a>.
                     </p>
                   </td>
                 </tr>
@@ -74,7 +77,7 @@
                   <th>Python</th>
                   <td>
                     <p>
-                      I have dabbled with Python in small projects: an
+                      I've dabbled with Python in small projects: an
                       <a href="https://github.com/chris-martin/keyconstraint/tree/master/play">
                       audio synthesizer</a>,
                       a presence notification system using an
