New course list page

--- a/index.html
+++ b/index.html
@@ -141,11 +141,14 @@
               <ul>
                 <li>
                   <b>Computer Science MS, Georgia Tech</b>
-                  2010&mdash;December 2013
+                  2010&mdash;2013
                 </li>
                 <ul>
                   <li>Specialization in information security.</li>
                 </ul>
+                  <li>
+                    GPA: 3.66
+                  </li>
                 <li>
                   <b>Computer Science BS, Georgia Tech</b>
                   2005&mdash;2010
@@ -157,7 +160,7 @@
                   </li>
                 </ul>
               </ul>
-              <p><a href="data/gt-class.html">List of courses</a></p>
+              <p><a href="/georgia-tech">List of courses</a></p>
             </section>
           </div>
 
