add trailing slash to georgia-tech link

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                   </li>
                 </ul>
               </ul>
-              <p><a href="/georgia-tech">List of courses</a></p>
+              <p><a href="/georgia-tech/">List of courses</a></p>
             </section>
           </div>
 
