fix broken html

--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
                   2010&mdash;2013
                 </li>
                 <ul>
-                  <li>Specialization in information security.</li>
-                </ul>
                   <li>
+                    Specialization in information security.
                     GPA: 3.66
                   </li>
+                </ul>
                 <li>
                   <b>Computer Science BS, Georgia Tech</b>
                   2005&mdash;2010
