change link from codeswarm to github/gtri

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                 </ul>
                 <li>
                   Some small open source projects that have spun off from
-                  my work at GTRI are listed at
-                  <a href="http://codeswarm.org/">codeswarm.org</a>.
+                  my work at GTRI
+                  <a href="https://github.com/gtri">are on GitHub</a>.
                 </li>
               </ul>
             </section>
