remove eclipse plugin, add h2-mac

--- a/index.html
+++ b/index.html
@@ -50,14 +50,17 @@
                   <th>Java</th>
                   <td>
                     <p>
-                      I started with Java in 2005 and since have worked extensively
-                      with Servlet-based web applications. Since adopting Scala,
-                      I have lost patience with Java's inadequacies.
-                      Graphics:
+                      I started with Java in 2005 and since have worked
+                      extensively with Servlet-based web applications at GTRI.
+                      Since adopting Scala, I have lost patience with Java's
+                      inadequacies.
+                      One of my projects in grad school was adding
+                      <a href="https://github.com/chris-martin/h2/tree/mac">
+                      Row-level mandatory access control to H2</a>.
+                      Graphics projects:
                       <a href="https://github.com/chris-martin/spray">3D sculpting</a>,
                       <a href="https://github.com/chris-martin/packing-game">circle-packing</a>,
                       <a href="https://github.com/chris-martin/delaunay">spring physics simulation</a>.
-                      An <a href="https://github.com/chris-martin/hava">Eclipse plugin</a>.
                     </p>
                   </td>
                 </tr>
