--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                       inadequacies.
                       One of my projects in grad school was adding
                       <a href="https://github.com/chris-martin/h2/tree/mac">
-                      Row-level mandatory access control to H2</a>.
+                      row-level mandatory access control to H2</a>.
                       Graphics projects:
                       <a href="https://github.com/chris-martin/spray">3D sculpting</a>,
                       <a href="https://github.com/chris-martin/packing-game">circle-packing</a>,
